@@ -1,27 +1,22 @@
 package com.sparta.oishitable.domain.customer.reservation.service;
 
+import com.sparta.oishitable.domain.common.user.entity.User;
+import com.sparta.oishitable.domain.common.user.repository.UserRepository;
 import com.sparta.oishitable.domain.customer.reservation.dto.ReservationCreateRequest;
 import com.sparta.oishitable.domain.customer.reservation.dto.ReservationFindResponse;
 import com.sparta.oishitable.domain.customer.reservation.entity.Reservation;
-import com.sparta.oishitable.domain.customer.reservation.entity.ReservationStatus;
 import com.sparta.oishitable.domain.customer.reservation.repository.ReservationRepository;
 import com.sparta.oishitable.domain.owner.restaurantseat.entity.RestaurantSeat;
 import com.sparta.oishitable.domain.owner.restaurantseat.service.RestaurantSeatService;
-import com.sparta.oishitable.domain.admin.seatType.entity.SeatType;
-import com.sparta.oishitable.domain.admin.seatType.service.SeatTypeService;
-import com.sparta.oishitable.domain.common.user.entity.User;
-import com.sparta.oishitable.domain.common.user.repository.UserRepository;
 import com.sparta.oishitable.global.exception.CustomRuntimeException;
+import com.sparta.oishitable.global.exception.InvalidException;
 import com.sparta.oishitable.global.exception.NotFoundException;
 import com.sparta.oishitable.global.exception.error.ErrorCode;
-import jakarta.persistence.OptimisticLockException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -31,9 +26,6 @@ public class ReservationService {
     private final UserRepository userRepository;
     private final ReservationRepository reservationRepository;
     private final RestaurantSeatService restaurantSeatService;
-    private final SeatTypeService seatTypeService;
-
-    private static final int couponQuantity = 100;
 
     @Transactional
     public void createReservationService(
@@ -43,93 +35,54 @@ public class ReservationService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException(ErrorCode.USER_NOT_FOUND));
 
-        SeatType seatType = seatTypeService.findSeatTypeByName(request.seatTypeName());
-
-        RestaurantSeat restaurantSeat = restaurantSeatService.findBySeatType(seatType);
-
-        LocalDateTime reservationDate = request.date();
+        RestaurantSeat restaurantSeat = restaurantSeatService.findByRestaurantIdAndSeatTypeId(
+                request.restaurantId(),
+                request.seatTypeId()
+        );
 
         //같은 날짜에 같은 좌석에 예약되있는 건 전부를 조회
-        int reservedCount = reservationRepository.countByRestaurantSeatAndDate(restaurantSeat, reservationDate);
+        int reservedCount = reservationRepository.countByRestaurantSeatAndDate(restaurantSeat, request.date());
 
         //가게 좌석의 수량과 비교한 후 자리가 없으면 에외
-        if (reservedCount + request.totalCount() > restaurantSeat.getQuantity()) {
-            throw new CustomRuntimeException(ErrorCode.RESTAURANT_SEAT_TYPE_QUANTITY_NOT_FOUND);
+        if (restaurantSeat.getQuantity() <= reservedCount) {
+            throw new InvalidException(ErrorCode.RESTAURANT_SEAT_NOT_AVAILABLE);
         }
 
-//        Long couponProvided = reservationRepository.countByDiscount(10);
-        long couponProvided = reservationRepository.countByCouponExistTrue();
-        if (couponProvided >= couponQuantity) {
-            throw new CustomRuntimeException(ErrorCode.RESERVATION_COUPON_LIMIT_EXCEEDED);
+        if (restaurantSeat.getMinGuestCount() > request.totalCount()) {
+            throw new InvalidException(ErrorCode.BELOW_MIN_GUEST_COUNT);
         }
 
-        try {
-            Reservation reservation = Reservation.builder()
-                    .date(request.date())
-                    .totalCount(request.totalCount())
-                    .status(ReservationStatus.RESERVED)
-                    .user(user)
-                    .restaurantSeat(restaurantSeat)
-                    .discount(10)
-                    .couponExist(true)
-                    .build();
-
-            reservationRepository.save(reservation);
-        } catch (OptimisticLockException e) {
-            throw new CustomRuntimeException(ErrorCode.RESERVATION_CONFLICT);
+        if (restaurantSeat.getMaxGuestCount() < request.totalCount()) {
+            throw new InvalidException(ErrorCode.EXCEEDS_MAX_GUEST_COUNT);
         }
 
-/*        Reservation reservation = Reservation.builder()
+        Reservation reservation = Reservation.builder()
                 .date(request.date())
                 .totalCount(request.totalCount())
-                .status(ReservationStatus.RESERVED)
                 .user(user)
                 .restaurantSeat(restaurantSeat)
-                .discount(10)
-                .couponExist(true)
                 .build();
 
         reservationRepository.save(reservation);
-        reservation.discountCoupon(10);
-
-        reservationRepository.save(reservation);*/
-
-
     }
 
-    public ReservationFindResponse findReservation(long reservationId) {
+    public ReservationFindResponse findReservation(Long reservationId) {
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new CustomRuntimeException(ErrorCode.RESERVATION_NOT_FOUND));
 
-        reservation.complete();
-
-        return new ReservationFindResponse(
-                reservation.getRestaurantSeat().getId(),
-                reservation.getDate(),
-                reservation.getTotalCount(),
-                reservation.getRestaurantSeat().getSeatType().getName(),
-                reservation.getStatus(),
-                reservation.isCouponExist()
-        );
+        return ReservationFindResponse.from(reservation);
     }
 
     public List<ReservationFindResponse> findAllReservations(Long userId) {
-        List<Reservation> reservations = reservationRepository.findByUser_Id(userId);
+        List<Reservation> reservations = reservationRepository.findByUserId(userId);
 
         return reservations.stream()
-                .map(reservation -> new ReservationFindResponse(
-                        reservation.getRestaurantSeat().getId(),
-                        reservation.getDate(),
-                        reservation.getTotalCount(),
-                        reservation.getRestaurantSeat().getSeatType().getName(),
-                        reservation.getStatus(),
-                        reservation.isCouponExist()))
-                .collect(Collectors.toList());
+                .map(ReservationFindResponse::from)
+                .toList();
     }
 
     @Transactional
-    public void deleteReservation(long reservationId) {
-//        reservationRepository.deleteById(reservationId);
+    public void deleteReservation(Long reservationId) {
         Reservation reservation = reservationRepository.findById(reservationId)
                 .orElseThrow(() -> new CustomRuntimeException(ErrorCode.RESERVATION_NOT_FOUND));
 
